# SOFT_3D

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE.txt  README.md  demo-Lines.cpp  demo-SceneRoaming.cpp  demo-Teapot.cpp  ege3D.sln
EGETeapot/: EGETeapot.cpp  EGETeapot.vcxproj  EGETeapot.vcxproj.filters
SceneRoaming/: SceneRoaming.vcxproj  SceneRoaming.vcxproj.filters  main.cpp
algorithm/: cgeMat.h  cgeScene.h  cgeVec.h  htMat.h  htStaticAssert.h  htVec.h
ege/include/: ege.h  graphics.h
ege/include/ege/: button.h  egecontrolbase.h  fps.h  label.h  sys_edit.h
ege/lib/codeblocks/: CodeBlocks 20.03 (MinGW-w64 GCC 8.1.0).txt
ege/lib/devcpp/: Dev-C++ 5.11 TDM-GCC 4.9.2.txt
ege/lib/mingw64/: MinGW-w64 GCC 8.1.0.txt
ege/lib/redpanda/: RedPanda MinGW-w64 GCC 11.4.0 64-bit.txt
ege/lib/vc6/: VC6.0.txt  graphics.lib
ege/lib/vs2010/: graphics.lib
ege/lib/vs2010/amd64/: graphics.lib
ege/lib/vs2015/: VS2015 Update3.txt  graphics.lib
ege/lib/vs2015/amd64/: graphics.lib
ege/lib/vs2017/: VS2017 Community 15.9.63.txt
ege/lib/vs2017/x64/: graphics.lib
ege/lib/vs2017/x86/: graphics.lib
ege/lib/vs2019/x64/: graphics.lib
ege/lib/vs2019/x86/: graphics.lib
ege/lib/vs2022/x64/: graphics.lib
ege/lib/vs2022/x86/: graphics.lib
ege3D/: ege3D.cpp  ege3D.vcxproj  ege3D.vcxproj.filters
model/: amahani.h  teapot.h
